@@ -19,28 +19,30 @@ import com.liferay.portal.kernel.exception.SystemException;
 import com.liferay.portal.kernel.io.unsync.UnsyncStringWriter;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.model.Layout;
+import com.liferay.portal.kernel.model.LayoutConstants;
+import com.liferay.portal.kernel.model.Portlet;
+import com.liferay.portal.kernel.model.PortletApp;
+import com.liferay.portal.kernel.model.PortletURLListener;
 import com.liferay.portal.kernel.portlet.LiferayPortletResponse;
 import com.liferay.portal.kernel.portlet.LiferayPortletURL;
+import com.liferay.portal.kernel.portlet.PortletPreferencesFactoryUtil;
+import com.liferay.portal.kernel.portlet.PortletURLFactoryUtil;
+import com.liferay.portal.kernel.security.xml.SecureXMLFactoryProviderUtil;
+import com.liferay.portal.kernel.service.LayoutLocalServiceUtil;
+import com.liferay.portal.kernel.service.PortletLocalServiceUtil;
 import com.liferay.portal.kernel.servlet.URLEncoder;
+import com.liferay.portal.kernel.theme.ThemeDisplay;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.ParamUtil;
+import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.model.Layout;
-import com.liferay.portal.model.LayoutConstants;
-import com.liferay.portal.model.Portlet;
-import com.liferay.portal.model.PortletApp;
-import com.liferay.portal.model.PortletURLListener;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.security.lang.DoPrivilegedUtil;
-import com.liferay.portal.security.xml.SecureXMLFactoryProviderUtil;
-import com.liferay.portal.service.LayoutLocalServiceUtil;
-import com.liferay.portal.service.PortletLocalServiceUtil;
 import com.liferay.portal.struts.StrutsActionPortletURL;
-import com.liferay.portal.theme.ThemeDisplay;
-import com.liferay.portal.util.PortalUtil;
 import com.liferay.portal.util.PropsValues;
-import com.liferay.portal.util.WebKeys;
 
 import java.io.Writer;
 
@@ -121,7 +123,7 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 			setDateHeader(name, date);
 		}
 		else {
-			values = ArrayUtil.append(values, new Long(date));
+			values = ArrayUtil.append(values, Long.valueOf(date));
 
 			_headers.put(name, values);
 		}
@@ -157,7 +159,7 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 			setIntHeader(name, value);
 		}
 		else {
-			values = ArrayUtil.append(values, new Integer(value));
+			values = ArrayUtil.append(values, Integer.valueOf(value));
 
 			_headers.put(name, values);
 		}
@@ -356,6 +358,7 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 		return _plid;
 	}
 
+	@Override
 	public Portlet getPortlet() {
 		if (_portlet == null) {
 			try {
@@ -412,7 +415,7 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 			_headers.remove(name);
 		}
 		else {
-			_headers.put(name, new Long[] {new Long(date)});
+			_headers.put(name, new Long[] {Long.valueOf(date)});
 		}
 	}
 
@@ -440,7 +443,7 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 			_headers.remove(name);
 		}
 		else {
-			_headers.put(name, new Integer[] {new Integer(value)});
+			_headers.put(name, new Integer[] {Integer.valueOf(value)});
 		}
 	}
 
@@ -626,7 +629,7 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 			plid = _plid;
 		}
 
-		PortletURLImpl portletURLImpl = null;
+		LiferayPortletURL portletURL = null;
 
 		Portlet portlet = getPortlet();
 
@@ -638,8 +641,7 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 			if (portletURLClass.equals(
 					StrutsActionPortletURL.class.getName())) {
 
-				portletURLImpl = new StrutsActionPortletURL(
-					this, plid, lifecycle);
+				portletURL = new StrutsActionPortletURL(this, plid, lifecycle);
 			}
 			else {
 				try {
@@ -650,17 +652,18 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 						Class<?> portletURLClassObj = Class.forName(
 							portletURLClass);
 
-						constructor = (Constructor<? extends PortletURLImpl>)
-							portletURLClassObj.getConstructor(
-								new Class[] {
-									PortletResponseImpl.class, long.class,
-									String.class
-								});
+						constructor =
+							(Constructor<? extends PortletURLImpl>)
+								portletURLClassObj.getConstructor(
+									new Class[] {
+										PortletResponseImpl.class, long.class,
+										String.class
+									});
 
 						_constructors.put(portletURLClass, constructor);
 					}
 
-					portletURLImpl = constructor.newInstance(
+					portletURL = constructor.newInstance(
 						new Object[] {this, plid, lifecycle});
 				}
 				catch (Exception e) {
@@ -669,8 +672,8 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 			}
 		}
 
-		if (portletURLImpl == null) {
-			portletURLImpl = new PortletURLImpl(
+		if (portletURL == null) {
+			portletURL = PortletURLFactoryUtil.create(
 				_portletRequestImpl, portletName, plid, lifecycle);
 		}
 
@@ -685,16 +688,13 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 					PortletURLListenerFactory.create(portletURLListener);
 
 				if (lifecycle.equals(PortletRequest.ACTION_PHASE)) {
-					portletURLGenerationListener.filterActionURL(
-						portletURLImpl);
+					portletURLGenerationListener.filterActionURL(portletURL);
 				}
 				else if (lifecycle.equals(PortletRequest.RENDER_PHASE)) {
-					portletURLGenerationListener.filterRenderURL(
-						portletURLImpl);
+					portletURLGenerationListener.filterRenderURL(portletURL);
 				}
 				else if (lifecycle.equals(PortletRequest.RESOURCE_PHASE)) {
-					portletURLGenerationListener.filterResourceURL(
-						portletURLImpl);
+					portletURLGenerationListener.filterResourceURL(portletURL);
 				}
 			}
 			catch (PortletException pe) {
@@ -703,24 +703,24 @@ public abstract class PortletResponseImpl implements LiferayPortletResponse {
 		}
 
 		try {
-			portletURLImpl.setWindowState(_portletRequestImpl.getWindowState());
+			portletURL.setWindowState(_portletRequestImpl.getWindowState());
 		}
 		catch (WindowStateException wse) {
 			_log.error(wse.getMessage());
 		}
 
 		try {
-			portletURLImpl.setPortletMode(_portletRequestImpl.getPortletMode());
+			portletURL.setPortletMode(_portletRequestImpl.getPortletMode());
 		}
 		catch (PortletModeException pme) {
 			_log.error(pme.getMessage());
 		}
 
 		if (lifecycle.equals(PortletRequest.RESOURCE_PHASE)) {
-			portletURLImpl.setCopyCurrentRenderParameters(true);
+			portletURL.setCopyCurrentRenderParameters(true);
 		}
 
-		return portletURLImpl;
+		return portletURL;
 	}
 
 	protected void init(
